--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -572,12 +572,12 @@ WB_FILE_FORMAT=File Format?
 WB_EDIT_PROPS=Edit Properties
 WB_EDIT_PROPS_MNEU=E
 WB_NO_IMAGE_ROW=No image available for the selected row
-WB_LOAD_NEW_IMAGE=Load New Image
-WB_ERROR_LOAD_IMAGE=Error Loading Image
+WB_LOAD_NEW_IMAGE=Link New Image
+WB_ERROR_LOAD_IMAGE=Error Linking Image
 WB_ERROR_IMAGE_TOOLARGE=The image was too large (16 Megabyte limit).
-WB_ERROR_IMAGE_MEMORY=Specify ran out of memory trying to load the image.
-WB_ERROR_IMAGE_GENERIC=Error Loading Image (No reason given.)
-WB_STOP_LOADING=Stop Loading Images
+WB_ERROR_IMAGE_MEMORY=Specify ran out of memory trying to link the image.
+WB_ERROR_IMAGE_GENERIC=Error Linking Image (No reason given.)
+WB_STOP_LOADING=Stop Linking Images
 WB_CONVERT_GEO_FORMAT=Convert Georeference Formats
 WB_PARSE_FILE_ERROR=The file `%s` could not be properly read in, it is most likely the wrong format.
 WB_IMAGE_WINDOW=Image Window
@@ -605,6 +605,8 @@ WB_COLUMN=Column
 WB_TRUNCATED=Excluded Data
 WB_TRUNCATIONS=The following values were truncated during import:
 WB_ALWAYS_ON_TOP=Keep window on top
+WB_DEL_IMG_LINK=Delete Link
+WB_REPLACE_IMG=Replace IMage
 
 # ToolTips
 WB_CLICK_EDIT_DATA_TT=Click to edit the Data Set
