--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -605,8 +605,10 @@ WB_COLUMN=Column
 WB_TRUNCATED=Excluded Data
 WB_TRUNCATIONS=The following values were truncated during import:
 WB_ALWAYS_ON_TOP=Keep window on top
+WB_BASIC_LABEL_PROPERTIES=Label Properties
 WB_DEL_IMG_LINK=Delete Link
 WB_REPLACE_IMG=Replace IMage
+
 
 # ToolTips
 WB_CLICK_EDIT_DATA_TT=Click to edit the Data Set
