--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -138,7 +138,7 @@ GotoPreviousRecordTT=Go to Previous %s
 GotoNextRecordTT=Go to Next %s
 GotoLastRecordTT=Go to Last %s
 RemoveRecordTT=Delete %s
-NewRecordTT=Create new %s
+NewRecordTT=Create New %s
 
 #ValComboBoxFromQuery
 SearchForRecordTT=Search for %s
@@ -533,7 +533,7 @@ WB_ADD_MAPPING_ITEM=Add New Column
 WB_REMOVE_MAPPING_ITEM=Remove New Column
 WB_IMAGE=Image
 
-WB_CHOOSE_DATASET_REUSE= Choose a Data Set to reuse the mappings
+WB_CHOOSE_DATASET_REUSE= Choose a Data Set mapping to reuse
 WB_CHOOSE_DATASET_REUSE_TITLE=Choose Data Set Mapping
 
 WB_MAPPING_EDITOR=Data Set Mapping Editor
@@ -578,7 +578,7 @@ WB_ERROR_IMAGE_TOOLARGE=The image was too large (16 Megabyte limit).
 WB_ERROR_IMAGE_MEMORY=Specify ran out of memory trying to link the image.
 WB_ERROR_IMAGE_GENERIC=Error Linking Image (No reason given.)
 WB_STOP_LOADING=Stop Linking Images
-WB_CONVERT_GEO_FORMAT=Convert Georeference Formats
+WB_CONVERT_GEO_FORMAT=Convert Geocoordinate Formats
 WB_PARSE_FILE_ERROR=The file `%s` could not be properly read in, it is most likely the wrong format.
 WB_IMAGE_WINDOW=Image Window
 WB_INITIAL_HTML=help/SpecifyHelp/Workbench/Overview.html
@@ -618,10 +618,10 @@ WB_REUSE_MAPPING_TT=Create new Data Set resuing a mapping from an existing Data 
 WB_NEW_DATASET_TT=Create a new Data Set with a new mapping
 WB_EXPORT_DATA_TT=Export the Data Set to an MS-Excel file
 WB_EXPORT_TEMPLATE_TT=Create an empty MS-Excel file by exporting the DatSet's Columns definitions 
-WB_ADDITIONAL_FIELDS_REQD=Additional fields required in Data Set Mapping
+WB_ADDITIONAL_FIELDS_REQD=Missing column headings
 
-WB_SHOW_GRID_VIEW=Show Grid View
-WB_SHOW_FORM_VIEW=Show Form View
+WB_SHOW_GRID_VIEW=Switch to Grid View
+WB_SHOW_FORM_VIEW=Switch to Form View
 
 # Workbench/Google Earth Exporter Icon URLs
 WB_GOOGLE_FISH_ICON_URL=http://www.specifysoftware.org/Specify/AppResources/6/images/FishCircle.png
