More UI Fixes (minor)

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -607,7 +607,9 @@ WB_TRUNCATIONS=The following values were truncated during import:
 WB_ALWAYS_ON_TOP=Keep window on top
 WB_BASIC_LABEL_PROPERTIES=Label Properties
 WB_DEL_IMG_LINK=Delete Link
-WB_REPLACE_IMG=Replace IMage
+WB_REPLACE_IMG=Replace Image
+WB_DEL_IMG_LINK_MNEU=D
+WB_REPLACE_IMG_MNEU=R
 
 
 # ToolTips
