minor UI string changes

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -515,7 +515,7 @@ WB_IMPORTED_COLUMNS=Unmapped Imported Columns
 WB_MAP_BTN=Map
 WB_UNMAP_BTN=Unmap
 WB_REMOVE_COLUMNS=Columns To Be Removed
-WB_DATA_TYPE=Data Type
+WB_DATA_TYPE=Data Types
 WB_DATASET_COLUMNS=Data Set Columns
 WB_DATAOBJECTS=Data Objects
 WB_DATAOBJ_FIELDS=Fields
@@ -533,8 +533,8 @@ WB_ADD_MAPPING_ITEM=Add New Column
 WB_REMOVE_MAPPING_ITEM=Remove New Column
 WB_IMAGE=Image
 
-WB_CHOOSE_DATASET_REUSE= Choose a Data Set mapping to reuse
-WB_CHOOSE_DATASET_REUSE_TITLE=Choose Data Set Mapping
+WB_CHOOSE_DATASET_REUSE=Choose a Data Set mapping to reuse
+WB_CHOOSE_DATASET_REUSE_TITLE=Reuse Column Headings
 
 WB_MAPPING_EDITOR=Data Set Mapping Editor
 WB_IMPORT_MAPPING_EDITOR=Import Data Set Mapper
@@ -571,7 +571,7 @@ WB_FIELDS=Specify Fields
 WB_FILE_FORMAT=File Format?
 WB_EDIT_PROPS=Edit Properties
 WB_EDIT_PROPS_MNEU=E
-WB_NO_IMAGE_ROW=No image available for the selected row
+WB_NO_IMAGE_ROW=No image linked for the selected row
 WB_LOAD_NEW_IMAGE=Link New Image
 WB_ERROR_LOAD_IMAGE=Error Linking Image
 WB_ERROR_IMAGE_TOOLARGE=The image was too large (16 Megabyte limit).
