Added replaceAll function.  Fixed wrap search fuction.
Still need to track down issue with "Enter" button firing a search, and not enabling/disabling buttons correctly.

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -823,6 +823,7 @@ REPLACEALL=Replace All
 MATCHCASE=Match Case
 WRAP=Wrap Search
 PHRASENOTFOUND=Phrase not found
+ENDOFTABLE=End of table reached
 
 #################################
 # BioGeomancer stuff
