--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -823,6 +823,7 @@ REPLACEALL=Replace All
 MATCHCASE=Match Case
 WRAP=Wrap Search
 PHRASENOTFOUND=Phrase not found
+ENDOFTABLE=End of table reached
 
 #################################
 # BioGeomancer stuff
