added a statusbar to the image window externalized some strings set the text in the image window to have the filename in it set the text in the statusbar to have the full file path in it

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -607,10 +607,10 @@ WB_TRUNCATIONS=The following values were truncated during import:
 WB_ALWAYS_ON_TOP=Keep window on top
 WB_BASIC_LABEL_PROPERTIES=Label Properties
 WB_DEL_IMG_LINK=Delete Link
+WB_NO_ROW_SELECTED=No Row Selected
 WB_REPLACE_IMG=Replace Image
 WB_DEL_IMG_LINK_MNEU=D
 WB_REPLACE_IMG_MNEU=R
-
 
 # ToolTips
 WB_CLICK_EDIT_DATA_TT=Click to edit the Data Set
