--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -857,7 +857,7 @@ NONE=none
 BACKSLASH=backslash
 DOUBLED=doubled
 IMPORT_CVS=Import from CSV
-IMPORT_XLS=Import from XLS
+IMPORT_XLS=Import from Excel
 FILE_PREVIEW= Preview of file
 FILE_IMPORT=Import File
 DATA_IMPORT_OPS=Data Import Options
