Added check and dialog that prevent a user from importing more than 2000 rows of data.

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -864,6 +864,7 @@ DATA_IMPORT_OPS=Data Import Options
 DEFAULT_COLUMN_NAME=Column
 DATA_IMPORT_ERROR=There are problems with the data you are wanting to import.  Details...
 DATA_IMPORT_ISSUES=Data Import Problems
+WB_MAXROWS=Import Error
 
 # geo reference related items
 N=N
