more fix for bad.xls import, table no longer scrunched.  new msg offered.

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -580,6 +580,7 @@ WB_ERROR_IMAGE_GENERIC=Error Linking Image (No reason given.)
 WB_STOP_LOADING=Stop Linking Images
 WB_CONVERT_GEO_FORMAT=Convert Geocoordinate Formats
 WB_PARSE_FILE_ERROR=The file `%s` could not be properly read in, it is most likely the wrong format.
+WB_PARSE_FILE_ERROR2=The file could not be properly read in, it is most likely the wrong format.
 WB_IMAGE_WINDOW=Image Window
 WB_INITIAL_HTML=help/SpecifyHelp/Workbench/Overview.html
 WB_EXPORT_NOFILENAME=No file name was entered.
