--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -40,8 +40,8 @@ Continue=Continue
 # Toolbar /  Tasks
 #################################
 Startup=Welcome
-Workbench=Workbench
-workbench_hint=Create and edit an Workbench Data Set
+Workbench=WorkBench
+workbench_hint=Create and edit an WorkBench Data Set
 Data_Entry=Data Entry
 dataentry_hint=Enter and update your collections
 Taxon_Tree=Taxonomy Tree
@@ -493,7 +493,7 @@ picklists=Pick Lists
 newpicklist=New Pick List
 
 #################################
-# Workbench
+# WorkBench
 #################################
 Templates=Templates
 WB_WELCOME=Welcome to the WorkBench
@@ -523,7 +523,7 @@ WB_NEW_DATASET_MAPPINGS=New Mapping
 WB_ADD_ROW=Add a row
 WB_INSERT_ROW=Insert a row
 WB_CLEAR_CELLS=Clear Cells
-WB_DELETE_ROW=Delete a row(s)
+WB_DELETE_ROW=Delete row(s)
 WB_CHOOSE_DATASET=Choose a Data Set
 WB_SELECT_FIELD_TITLE=Select a Field
 WB_SELECT_FIELD=Choose which field to report on:
@@ -557,16 +557,16 @@ WB_REDUCED_SIZE=Reduced Size
 WB_ORIG_SIZE=Original Size
 WB_DO_BIOGEOMANCER_LOOKUP=Georeference using BioGeomancer
 WB_EXPORT_DATA=Export Data Set
-WB_EXPORT_TEMPLATE=Export Excel Template
+WB_EXPORT_TEMPLATE=Export MS Excel Template
 WB_EDIT_CONTROL=Edit Form Properties
 WB_SELECT_ACTION_TITLE=Select an Action
 WB_EDIT_MAPPINGS=Edit Column Mappings
 WB_EDIT_DATASET_MAPPING=Edit Data Set Mapping
 WB_EDIT_DATASET_MAPPING_MNEU=D
 WB_CREATE_EMPTY_DATASET=Create Empty Spreadsheet from the '%s' Template
-WorkbenchDataItem=Workbench Data Item
-WorkbenchTemplate=Workbench Template
-WorkbenchTemplateMappingItem=Workbench Template Mapping Item
+WorkbenchDataItem=WorkBench Data Item
+WorkbenchTemplate=WorkBench Template
+WorkbenchTemplateMappingItem=WorkBench Template Mapping Item
 WB_FIELDS=Specify Fields
 WB_FILE_FORMAT=File Format?
 WB_EDIT_PROPS=Edit Properties
@@ -615,13 +615,19 @@ WB_REPLACE_IMG_MNEU=R
 
 # ToolTips
 WB_CLICK_EDIT_DATA_TT=Click to edit the Data Set
-WB_IMPORTDATA_TT=Import data from a Excel or CSV file
-WB_IMPORTCARDS_TT=Create new Data Set from a one or more images
+WB_IMPORTDATA_TT=Import data from a MS Excel or CSV file
+WB_IMPORTCARDS_TT=Create new Data Set from one or more images
 WB_REUSE_MAPPING_TT=Create new Data Set resuing a mapping from an existing Data Set
 WB_NEW_DATASET_TT=Create a new Data Set with a new mapping
-WB_EXPORT_DATA_TT=Export the Data Set to an MS-Excel file
-WB_EXPORT_TEMPLATE_TT=Create an empty MS-Excel file by exporting the DatSet's Columns definitions 
+WB_EXPORT_DATA_TT=Export the Data Set to an MS Excel file
+WB_EXPORT_TEMPLATE_TT=Create an empty MS Excel file by exporting the DatSet's Columns definitions 
 WB_ADDITIONAL_FIELDS_REQD=Missing column headings
+
+WB_TOP10_TT=Top 10 Pie Chart Report
+WB_BARCHART_TT=Bar Chart Summary Report for a given field
+WB_BASIC_LBL_TT=Prints Labels
+WB_SUMMARY_TT=Prints a Summary Report for a given field
+WB_PRINTREPORT_TT=Prints a Report
 
 WB_SHOW_GRID_VIEW=Switch to Grid View
 WB_SHOW_FORM_VIEW=Switch to Form View
@@ -858,7 +864,7 @@ NONE=none
 BACKSLASH=backslash
 DOUBLED=doubled
 IMPORT_CVS=Import from CSV
-IMPORT_XLS=Import from Excel
+IMPORT_XLS=Import from MS Excel
 FILE_PREVIEW= Preview of file
 FILE_IMPORT=Import File
 DATA_IMPORT_OPS=Data Import Options
