--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -828,7 +828,7 @@ PREVIOUS=Previous
 REPLACE=Replace
 REPLACEALL=Replace All
 MATCHCASE=Match Case
-WRAP=Wrap Search
+WRAP=Wrap
 PHRASENOTFOUND=Phrase not found
 ENDOFTABLE=End of table reached
 
