--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -614,19 +614,19 @@ WB_DEL_IMG_LINK_MNEU=D
 WB_REPLACE_IMG_MNEU=R
 
 # ToolTips
-WB_CLICK_EDIT_DATA_TT=Click to edit the Data Set
-WB_IMPORTDATA_TT=Import data from a MS Excel or CSV file
+WB_CLICK_EDIT_DATA_TT=Click to edit the Data Set, Right Click to edit Data Set Properties
+WB_IMPORTDATA_TT=Import data from an MS Excel or CSV file
 WB_IMPORTCARDS_TT=Create new Data Set from one or more images
 WB_REUSE_MAPPING_TT=Create new Data Set resuing a mapping from an existing Data Set
 WB_NEW_DATASET_TT=Create a new Data Set with a new mapping
 WB_EXPORT_DATA_TT=Export the Data Set to an MS Excel file
-WB_EXPORT_TEMPLATE_TT=Create an empty MS Excel file by exporting the DatSet's Columns definitions 
+WB_EXPORT_TEMPLATE_TT=Export Data Set Column Headings to MS Excel
 WB_ADDITIONAL_FIELDS_REQD=Missing column headings
 
 WB_TOP10_TT=Top 10 Pie Chart Report
-WB_BARCHART_TT=Bar Chart Summary Report for a given field
+WB_BARCHART_TT=Bar Chart Summary Report for a given column
 WB_BASIC_LBL_TT=Prints Labels
-WB_SUMMARY_TT=Prints a Summary Report for a given field
+WB_SUMMARY_TT=Prints a Summary Report for a given column
 WB_PRINTREPORT_TT=Prints a Report
 
 WB_SHOW_GRID_VIEW=Switch to Grid View
@@ -754,6 +754,7 @@ CollectionObject=Collection Object
 CollectionObjectAttr=Collection Object Attr
 CollectionObjectCitation=Collection Object Citation
 Collector=Collector
+ColObjAttributes=Collection Object Attributes
 Container=Container
 ContainerItem=Container Item
 DataType=Data Type
@@ -772,6 +773,7 @@ GeologicTimePeriod=Geologic Time Period
 GeologicTimePeriodTreeDef=Geologic Time Period Tree Def
 GeologicTimePeriodTreeDefItem=Geologic Time Period Tree Def Item
 GroupPerson=Group Person
+HabitatAttributes=Habitat Attributes
 InfoRequest=Info Request
 Journal=Journal
 Loan=Loan
@@ -789,6 +791,7 @@ PickList=Pick List
 PickListItem=Pick List Item
 Preparation=Preparation
 PreparationAttr=Preparation Attr
+PreparationAttributes=Preparation Attributes
 PrepType=Preparation Type
 Project=Project
 ProjectCollectionObject=Project Collection Object
