minor release fixes

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -496,7 +496,7 @@ newpicklist=New Pick List
 # WorkBench
 #################################
 Templates=Templates
-WB_WELCOME=Welcome to the WorkBench
+WB_WELCOME=Welcome to the Specify WorkBench
 WB_DATASETS=Data Sets
 WB_DATASET=Data Set
 WB_NEW_DATASET=New Data Set
