--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -585,8 +585,6 @@ WB_IMAGE_WINDOW=Image Window
 WB_INITIAL_HTML=help/SpecifyHelp/Workbench/Overview.html
 WB_EXPORT_NOFILENAME=No file name was entered.
 WB_NEWDATA_TOO_LONG=The data in the field '%s' exceeds %d characters.
-WB_TEXTFIELD=Text Field
-WB_TEXTAREA=Text Area
 LOADING_MAP=Loading Map...
 WB_ERROR_SAVING=Error saving the Data Set.
 WB_SAVED='%s' was saved.
@@ -631,6 +629,16 @@ WB_PRINTREPORT_TT=Prints a Report
 
 WB_SHOW_GRID_VIEW=Switch to Grid View
 WB_SHOW_FORM_VIEW=Switch to Form View
+
+# EditForm Control Properties Dialog
+WB_FIELD_LEN=Field Length
+WB_LABEL=Label
+WB_X=X
+WB_Y=Y
+WB_NUM_ROWS=Number of Rows
+WB_FIELD_TYPE=Field Type
+WB_TEXTFIELD=Text Field
+WB_TEXTAREA=Text Area
 
 # Workbench/Google Earth Exporter Icon URLs
 WB_GOOGLE_FISH_ICON_URL=http://www.specifysoftware.org/Specify/AppResources/6/images/FishCircle.png
