--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -619,7 +619,7 @@ WB_REUSE_MAPPING_TT=Create new Data Set resuing a mapping from an existing Data 
 WB_NEW_DATASET_TT=Create a new Data Set with a new mapping
 WB_EXPORT_DATA_TT=Export the Data Set to an MS Excel file
 WB_EXPORT_TEMPLATE_TT=Export Data Set Column Headings to MS Excel
-WB_ADDITIONAL_FIELDS_REQD=Missing column headings
+WB_ADDITIONAL_FIELDS_REQD=Missing Column Headings
 
 WB_TOP10_TT=Top 10 Pie Chart Report
 WB_BARCHART_TT=Bar Chart Summary Report for a given column
