minor UI tweaks About Box Glass Pane msg BG

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -533,8 +533,7 @@ WB_ADD_MAPPING_ITEM=Add New Column
 WB_REMOVE_MAPPING_ITEM=Remove New Column
 WB_IMAGE=Image
 
-WB_CHOOSE_DATASET_REUSE=Choose a Data Set mapping to reuse
-WB_CHOOSE_DATASET_REUSE_TITLE=Reuse Column Headings
+WB_CHOOSE_DATASET_REUSE_TITLE=Data Set Column Headings
 
 WB_MAPPING_EDITOR=Data Set Mapping Editor
 WB_IMPORT_MAPPING_EDITOR=Import Data Set Mapper
