--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -24,6 +24,7 @@ Close=Close
 Help=Help
 HelpMneu=H
 SelectAll=Select All
+SelectNone=Select None
 DeselectAll=Deselect All
 Error=Error
 Warning=Warning
