--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -16,7 +16,7 @@ Browse=Browse...
 Next=Next
 Skip=Skip
 Back=Back
-Wrap=Wrap
+Wrap=Wrap 
 WrapSearch=Wrap Search
 OK=OK
 Apply=Apply
@@ -36,6 +36,7 @@ SelectAll=Select All
 DeselectAll=Deselect All
 Accept=Accept
 Continue=Continue
+Images=Images 
 
 #################################
 # Toolbar /  Tasks
