fix for bug 4400. Added new constructor and member and changed code in createGUI for CustomDialog. This was because I couldn't deal with OK being the default button when it was OKing overwrite of existing data.

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -611,6 +611,9 @@ WB_NO_ROW_SELECTED=No Row Selected
 WB_REPLACE_IMG=Replace Image
 WB_DEL_IMG_LINK_MNEU=D
 WB_REPLACE_IMG_MNEU=R
+WB_FILE_EXISTS=The file you specified already exists in the selected directory.
+WB_OK_TO_OVERWRITE=Is it OK to overwrite this file?
+WB_FILE_EXISTS_TITLE=File Exists
 
 # ToolTips
 WB_CLICK_EDIT_DATA_TT=Click to edit the Data Set, Right Click to edit Data Set Properties
