--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -87,7 +87,7 @@ GoogleEarth=Google Earth
 GoogleEarth_Description=Any data containing geo references can be displayed inside Google Earth.  This exporter allows you to visualize the locations from which a collection was obtained.  This can easily show the global reach of a collection's holdings.  <a href="http://earth.google.com/">Get Google Earth!</a>
 DiGIR=DiGIR
 DiGIR_Description=Collection object data can be exported to the DiGIR schema format for transfer through a DiGIR portal.  For more information on DiGIR, visit <a href="http://digir.sourceforge.net/">http://digir.sourceforge.net/</a>.
-EXPORTING_TO=Exporting to %s ...
+EXPORTING_TO=Exporting to %s...
 EXPORTING_DONE=Done exporting to %s
 
 #################################
@@ -245,7 +245,7 @@ CheckNow=Check For Updates
 #################################
 AgentTitle=%s Agent
 PermitTitle=%s Permit
-LoggingIn=Logging into %s ...
+LoggingIn=Logging into %s...
 LoadingSchema=Loading Database Schema...
 NoViewsForUserDatabase=You do not have access to any forms for database '%s'
 
@@ -594,7 +594,9 @@ WB_EDIT_DLG_TITLE=%s Properties
 WB_SAVE_DATASET_TT=Save '%s' Data Set
 WB_DELETING_DATASET=Deleting %s...
 WB_DELETED_DATASET=Deleted %s
-WB_LOADING_DATASET=Importing %s...
+WB_IMPORTING_DATASET=Importing %s...
+WB_LOADING_DATASET=Loading Data Set %s...
+WB_LOADING_IMGS_DATASET=Loading Images for %s...
 WB_SAVED_MAPPINGS=Saved Mapping Information.
 WB_MOVE_UP=Move item up in the list
 WB_MOVE_DOWN=Move item down in the list
