--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -36,6 +36,7 @@ SelectAll=Select All
 DeselectAll=Deselect All
 Accept=Accept
 Continue=Continue
+Stop=Stop
 Images=Images 
 
 #################################
@@ -509,6 +510,9 @@ WB_REUSE_MAPPING=Reuse Data Set Mapping
 CHOOSE_WORKBENCH_IMPORT_FILE=Select a File to Import
 CHOOSE_WORKBENCH_EXPORT_FILE=Enter Export File Name
 WB_CHOOSE_IMAGES=Choose Images to Import
+WB_WRONG_IMAGE_TYPE=The file extension(s) '%s' are currently not supported image types.
+WB_WRONG_IMG_NO_IMAGES=None of the images selected had the proper supported image file extension type(s)\nUnsupported type(s) '%s'.
+WB_WRONG_IMG_SOME_IMAGES=Some of the selected images file extensions (%s) are not supported.
 WB_DATASET_INFO=Data Set Properties
 WB_NO_MAPPING=To Be Discarded
 WB_MAPPING_COLUMNS=Mappings
