--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -71,6 +71,7 @@ Applications=Apps
 ChooseFormat=Choose the export format
 VersionChecker=Version Checker
 VER_CHK_TITLE=Checking for Updates
+NO_UPDATES_AVAILABLE=No Updates Available
 UpdateError=Error while checking for updates
 
 Record_Set=Bundles
