Fix for Bugzilla #4425 (rework BGM results chooser buttons).

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -35,6 +35,7 @@ Login=Login
 SelectAll=Select All
 DeselectAll=Deselect All
 Accept=Accept
+Done=Done
 Continue=Continue
 Stop=Stop
 Images=Images 
