--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -29,6 +29,7 @@ DeselectAll=Deselect All
 Error=Error
 Warning=Warning
 Delete=Delete
+DELETE_MNEU=D
 Open=Open
 Email=Email
 Login=Login
@@ -517,6 +518,9 @@ WB_WRONG_IMG_NO_IMAGES=None of the images selected had the proper supported imag
 WB_WRONG_IMG_SOME_IMAGES=Some of the selected images file extensions (%s) are not supported.
 WB_DATASET_INFO=Data Set Properties
 WB_NO_MAPPING=To Be Discarded
+WB_NO_MAPPING_TT=The data in this column is not mapped and will be discarded.
+WB_NEW_REC=<New>
+WB_NEW_REC_TT=Select New and a Specify Field to create a mapping.
 WB_MAPPING_COLUMNS=Mappings
 WB_COLUMNS=Data Set Columns
 WB_IMPORTED_COLUMNS=Unmapped Imported Columns
@@ -599,6 +603,7 @@ WB_SAVING=Saving %s...
 WB_EDIT_DLG_TITLE=%s Properties
 WB_SAVE_DATASET_TT=Save '%s' Data Set
 WB_DELETING_DATASET=Deleting %s...
+WB_DEL_BACKED_UP=The Data Set '%s' was backed up to %s before deleting.
 WB_DELETED_DATASET=Deleted %s
 WB_IMPORTING_DATASET=Importing %s...
 WB_LOADING_DATASET=Loading Data Set %s...
