Bug 4503 - fixes rename to the same name or a name that is too long

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -544,6 +544,7 @@ WB_TOP10=Top 10
 WB_ADD_MAPPING_ITEM=Add New Column
 WB_REMOVE_MAPPING_ITEM=Remove New Column
 WB_IMAGE=Image
+WB_NAME_TOO_LONG=The Data Set name is too long, it must be less than 64 characters.
 
 WB_CHOOSE_DATASET_REUSE_TITLE=Data Set Column Headings
 
