--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -37,6 +37,7 @@ SelectAll=Select All
 DeselectAll=Deselect All
 Accept=Accept
 Done=Done
+Dismiss=Dismiss
 Continue=Continue
 Stop=Stop
 Images=Images 
