--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -40,7 +40,8 @@ Done=Done
 Dismiss=Dismiss
 Continue=Continue
 Stop=Stop
-Images=Images 
+Images=Images
+Cache=Cache
 
 #################################
 # Toolbar /  Tasks
