--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -941,5 +941,5 @@ BoundingBox=Bounding Box
 of=of
 
 # URLS that might change over time
-VERSION_CHECK_URL=http://redbud.nhm.ku.edu:8080/VersionChecker/VersionCheck
+VERSION_CHECK_URL=http://infowebapps.nhm.ku.edu:8080/VersionChecker/VersionCheck
 DOWNLOAD_SITE_URL=http://www.specifysoftware.org/Specify/download/
