--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -609,6 +609,8 @@ WB_SAVE_DATASET_TT=Save '%s' Data Set
 WB_DELETING_DATASET=Deleting %s...
 WB_DEL_BACKED_UP=The Data Set '%s' was backed up to %s before deleting.
 WB_DELETED_DATASET=Deleted %s
+WB_DELET_DS_MSG=Do you wish to delete '%s' ?
+WB_DELET_DS_TITLE=Deleting a Data Set
 WB_IMPORTING_DATASET=Importing %s...
 WB_LOADING_DATASET=Loading Data Set %s...
 WB_LOADING_IMGS_DATASET=Loading Images for %s...
