Renaming Prefs Cache pane to System pane

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -295,7 +295,8 @@ preferences=Preferences
 showall=Show All
 ui=User Interface
 
-formatting=Formatting
+Formatting=Formatting
+System=System
 settings=Settings
 
 # Email
