--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -875,7 +875,7 @@ NO_BG_RESULTS=BioGeomancer returned no results
 #################################
 # Google Earth stuff
 #################################
-NOT_ALL_MAPPED=Not all placemarks could be mapped
+NOT_ALL_MAPPED=%d of %d placemarks could not be mapped.
 GOOGLE_EARTH_ERROR=An error occurred while opening Google Earth.  Please verify that it is properly installed.
 
 #################################
