Oops.  This should have been with the last commit.  Just added a string to the i18n file.

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -665,12 +665,12 @@ WB_TEXTFIELD=Text Field
 WB_TEXTAREA=Text Area
 
 # Workbench/Google Earth Exporter Icon URLs
-WB_GOOGLE_FISH_ICON_URL=http://www.specifysoftware.org/Specify/AppResources/6/images/FishCircle.png
-WB_GOOGLE_BIRD_ICON_URL=http://www.specifysoftware.org/Specify/AppResources/6/images/BirdCircle.png
-WB_GOOGLE_ENTO_ICON_URL=http://www.specifysoftware.org/Specify/AppResources/6/images/EntoCircle.png
-WB_GOOGLE_PLANT_ICON_URL=http://www.specifysoftware.org/Specify/AppResources/6/images/PlantCircle.png
-WB_GOOGLE_MAMMAL_ICON_URL=http://www.specifysoftware.org/Specify/AppResources/6/images/MammalCircle.png
-WB_GOOGLE_HERP_ICON_URL=http://www.specifysoftware.org/Specify/AppResources/6/images/HerpCircle.png
+#WB_GOOGLE_FISH_ICON_URL=http://www.specifysoftware.org/Specify/AppResources/6/images/FishCircle.png
+#WB_GOOGLE_BIRD_ICON_URL=http://www.specifysoftware.org/Specify/AppResources/6/images/BirdCircle.png
+#WB_GOOGLE_ENTO_ICON_URL=http://www.specifysoftware.org/Specify/AppResources/6/images/EntoCircle.png
+#WB_GOOGLE_PLANT_ICON_URL=http://www.specifysoftware.org/Specify/AppResources/6/images/PlantCircle.png
+#WB_GOOGLE_MAMMAL_ICON_URL=http://www.specifysoftware.org/Specify/AppResources/6/images/MammalCircle.png
+#WB_GOOGLE_HERP_ICON_URL=http://www.specifysoftware.org/Specify/AppResources/6/images/HerpCircle.png
 
 #################################
 # Wizards
@@ -877,6 +877,7 @@ NO_BG_RESULTS=BioGeomancer returned no results
 #################################
 NOT_ALL_MAPPED=%d of %d placemarks could not be mapped.
 GOOGLE_EARTH_ERROR=An error occurred while opening Google Earth.  Please verify that it is properly installed.
+KML_EXPORT_ERROR=An error occurred while creating Google Earth KML file.
 
 #################################
 # Csv import dialog
@@ -945,4 +946,5 @@ of=of
 
 # URLS that might change over time
 VERSION_CHECK_URL=http://infowebapps.nhm.ku.edu:8080/VersionChecker/VersionCheck
+#VERSION_CHECK_URL=http://infowebapps.nhm.ku.edu:9090/VersionChecker/VersionCheck
 DOWNLOAD_SITE_URL=http://www.specifysoftware.org/Specify/download/
