Bug 4563 - enabling the adding of images (via a menu) to an existing DS

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -566,6 +566,7 @@ WB_SHOW_MAP=Show map of selected rows
 WB_GEO_REF_DATA_MAP=Georeference Map
 WB_SHOW_IN_GOOGLE_EARTH=Show in Google Earth
 WB_IMPORT_CARDS=Import Images
+WB_IMPORT_CARDS_MNEU=I
 WB_REUSE=Reuse
 WB_CHOOSE_IMAGES=Choose Images
 WB_CREATINGMAP=Creating Map...
