--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -136,6 +136,7 @@ RetrievingData=Retrieving Data
 LoadingImage=Loading Image...
 
 # Trash ITems
+Trash=Trash
 Restore=Restore
 DeletedItems=Deleted Items
 
@@ -412,16 +413,6 @@ QueryStarting=Searching for Data...
 PermitSearchTitle=Permit Search
 AgentSearchTitle=Agent Search
 
-
-#################################
-# Reports
-#################################
-Create_New_Report=Create New Report
-PrintLoan=Print Loan
-CreateLoanInvoiceForNum=Do you wish to create a new invoice for loan # %s 
-CreateLoanInvoice=Create Loan Invoice
-
-
 #################################
 # Data Entry
 #################################
@@ -489,12 +480,21 @@ SENDING_EMAIL=Sending email message...
 #################################
 # Labels
 #################################
+Create_New_Label=Create New Label
+LabelEditor=Label Editor
 AskCatalogNum=Please Enter a Catalog Item
 ChooseLabel=Choose a Label
 LotsOfLabels=You have choosen to create %d labels.\nDo you wish to continue?
 LotsOfLabelsTitle=Label Creation Request
-CreateLabels=Create Labels
-LabelEditor=Label Editor
+
+#################################
+# Reports
+#################################
+Create_New_Report=Create New Report
+ReportEditor=Report Editor
+PrintLoan=Print Loan
+CreateLoanInvoiceForNum=Do you wish to create a new invoice for loan # %s 
+CreateLoanInvoice=Create Loan Invoice
 
 #################################
 # SystemSetupTask
