more strings in the i18n file

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -869,9 +869,18 @@ PHRASENOTFOUND=Phrase not found
 ENDOFTABLE=End of table reached
 
 #################################
-# BioGeomancer stuff
+# BioGeomancer and GEOLocate stuff
 #################################
 NO_BG_RESULTS=BioGeomancer returned no results
+NO_GL_RESULTS=GEOLocate returned no results
+Number=Number
+Latitude=Latitude
+Longitude=Longitude
+ParsePattern=Parse Pattern
+LocalityString=Locality Description
+Country=Country
+County=County
+State=State
 
 #################################
 # Google Earth stuff
@@ -946,6 +955,6 @@ BoundingBox=Bounding Box
 of=of
 
 # URLS that might change over time
-VERSION_CHECK_URL=http://infowebapps.nhm.ku.edu:8080/VersionChecker/VersionCheck
-#VERSION_CHECK_URL=http://infowebapps.nhm.ku.edu:9090/VersionChecker/VersionCheck
+#VERSION_CHECK_URL=http://infowebapps.nhm.ku.edu:8080/VersionChecker/VersionCheck
+VERSION_CHECK_URL=http://infowebapps.nhm.ku.edu:9090/VersionChecker/VersionCheck
 DOWNLOAD_SITE_URL=http://www.specifysoftware.org/Specify/download/
