added log files display from Help menu

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -44,6 +44,12 @@ Stop=Stop
 Images=Images
 Cache=Cache
 
+LOG_FILES_TITLE=Log Files
+LOG_SHOW_FILES=Show Log Files
+LOG_SHOW_FILES_MNEU=S
+LOG_NO_ERRORS=No Errors
+LOG_EMPTY=The log file is empty.
+
 #################################
 # Toolbar /  Tasks
 #################################
@@ -549,6 +555,7 @@ WB_ADD_MAPPING_ITEM=Add New Column
 WB_REMOVE_MAPPING_ITEM=Remove New Column
 WB_IMAGE=Image
 WB_NAME_TOO_LONG=The Data Set name is too long, it must be less than 64 characters.
+WB_MAPPING_DUMP=Displays the mappings and copies them to the clipboard.
 
 WB_CHOOSE_DATASET_REUSE_TITLE=Data Set Column Headings
 
