--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -50,6 +50,10 @@ LOG_SHOW_FILES_MNEU=S
 LOG_NO_ERRORS=No Errors
 LOG_EMPTY=The log file is empty.
 
+# Used by LengthInputVerifier
+UI_NEWDATA_TOO_LONG=The data in the field '%s' exceeds %d characters.
+
+
 #################################
 # Toolbar /  Tasks
 #################################
@@ -608,7 +612,6 @@ WB_PARSE_FILE_ERROR2=The file could not be properly read in, it is most likely t
 WB_IMAGE_WINDOW=Image Window
 WB_INITIAL_HTML=help/SpecifyHelp/Workbench/Overview.html
 WB_EXPORT_NOFILENAME=No file name was entered.
-WB_NEWDATA_TOO_LONG=The data in the field '%s' exceeds %d characters.
 LOADING_MAP=Loading Map...
 WB_ERROR_SAVING=Error saving the Data Set.
 WB_SAVED='%s' was saved.
