--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -526,7 +526,8 @@ Label_Entry=From Labels
 WB_REUSE_MAPPING=Reuse Data Set Mapping
 CHOOSE_WORKBENCH_IMPORT_FILE=Select a File to Import
 CHOOSE_WORKBENCH_EXPORT_FILE=Enter Export File Name
-WB_CHOOSE_IMAGES=Choose Images to Import
+WB_CHOOSE_IMAGES=Choose Image Files
+WB_CHOOSE_IMAGE=Choose Image File
 WB_WRONG_IMAGE_TYPE=The file extension(s) '%s' are currently not supported image types.
 WB_WRONG_IMG_NO_IMAGES=None of the images selected had the proper supported image file extension type(s)\nUnsupported type(s) '%s'.
 WB_WRONG_IMG_SOME_IMAGES=Some of the selected images file extensions (%s) are not supported.
@@ -600,8 +601,8 @@ WB_FILE_FORMAT=File Format?
 WB_EDIT_PROPS=Edit Properties
 WB_EDIT_PROPS_MNEU=E
 WB_NO_IMAGE_ROW=No image linked for the selected row
-WB_LOAD_NEW_IMAGE=Link New Image
-WB_ERROR_LOAD_IMAGE=Error Linking Image
+WB_LOAD_NEW_IMAGE=Link New Image(s)
+WB_ERROR_LOAD_IMAGE=Error Linking Image(s)
 WB_ERROR_IMAGE_TOOLARGE=The image was too large (16 Megabyte limit).
 WB_ERROR_IMAGE_MEMORY=Specify ran out of memory trying to link the image.
 WB_ERROR_IMAGE_GENERIC=Error Linking Image (No reason given.)
@@ -637,10 +638,14 @@ WB_TRUNCATED=Excluded Data
 WB_TRUNCATIONS=The following values were truncated during import:
 WB_ALWAYS_ON_TOP=Keep window on top
 WB_BASIC_LABEL_PROPERTIES=Label Properties
-WB_DEL_IMG_LINK=Delete Link
-WB_NO_ROW_SELECTED=No Row Selected
-WB_REPLACE_IMG=Replace Image
+WB_DEL_IMG_LINK=Delete Image Link
 WB_DEL_IMG_LINK_MNEU=D
+WB_ADD_IMG=Add Image Links
+WB_ADD_IMG_MNEM=A
+WB_NO_ROW_SELECTED=No Row Selected
+WB_NO_IMAGES_LINKED=No Images Linked To Row
+WB_IMAGE_X_OF_Y=Image %d of %d
+WB_REPLACE_IMG=Replace Image
 WB_REPLACE_IMG_MNEU=R
 WB_FILE_EXISTS=The file you specified already exists in the selected directory.
 WB_OK_TO_OVERWRITE=Is it OK to overwrite this file?
