Fixed a version check URL in the i18n file

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -579,6 +579,7 @@ WB_GEO_REF_DATA_MAP=Georeference Map
 WB_SHOW_IN_GOOGLE_EARTH=Show in Google Earth
 WB_IMPORT_CARDS=Import Images
 WB_IMPORT_CARDS_MNEU=I
+WB_ADDING_IMAGE_X_OF_Y=Adding image file %d of %d
 WB_REUSE=Reuse
 WB_CHOOSE_IMAGES=Choose Images
 WB_CREATINGMAP=Creating Map...
@@ -970,6 +971,6 @@ BoundingBox=Bounding Box
 of=of
 
 # URLS that might change over time
-#VERSION_CHECK_URL=http://infowebapps.nhm.ku.edu:8080/VersionChecker/VersionCheck
-VERSION_CHECK_URL=http://infowebapps.nhm.ku.edu:9090/VersionChecker/VersionCheck
+VERSION_CHECK_URL=http://infowebapps.nhm.ku.edu:8080/VersionChecker/VersionCheck
+#VERSION_CHECK_URL=http://infowebapps.nhm.ku.edu:9090/VersionChecker/VersionCheck
 DOWNLOAD_SITE_URL=http://www.specifysoftware.org/Specify/download/
