image import problems during wb imports are tracked and displayed after importing. (similar to cell truncations)

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -651,6 +651,7 @@ WB_REPLACE_IMG_MNEU=R
 WB_FILE_EXISTS=The file you specified already exists in the selected directory.
 WB_OK_TO_OVERWRITE=Is it OK to overwrite this file?
 WB_FILE_EXISTS_TITLE=File Exists
+WB_IMG_IMPORT_ERROR=Error importing image
 
 # ToolTips
 WB_CLICK_EDIT_DATA_TT=Click to edit the Data Set, Right Click to edit Data Set Properties
