--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -814,6 +814,7 @@ DeaccessionPreparation=Deaccession Preparation
 Determination=Determination
 DeterminationCitation=Determination Citation
 DeterminationStatus=Determination Status
+Division=Division
 ExchangeIn=Exchange In
 ExchangeOut=Exchange Out
 Geography=Geography
@@ -825,6 +826,7 @@ GeologicTimePeriodTreeDefItem=Geologic Time Period Tree Def Item
 GroupPerson=Group Person
 HabitatAttributes=Habitat Attributes
 InfoRequest=Info Request
+Institution=Institution
 Journal=Journal
 Loan=Loan
 LoanAgent=Loan Agent
@@ -859,7 +861,8 @@ TaxonTreeDef=Taxon Tree Def
 TaxonTreeDefItem=Taxon Tree Def Item
 UserGroup=User Group
 ViewSetObj=View Set Obj
-
+WorkbenchRow=WorkbenchRow
+WorkbenchRowImage=WorkbenchRowImage
 
 # PickLists 
 SHIPMENT_METHOD=Shipment Method
