This should have gone with the last commit.

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -240,21 +240,25 @@ Replace=Replace
 ReplaceMneu=R
 
 # Other
-TaxonTree=Taxon Tree
-TaxonMenu=Taxon Tree
+TaxonTree=Taxonomy Trees
+TaxonMenu=Taxonomy Trees
 TaxonMnemonic=R
+TaxonStarterPaneText=This is the taxonomy tree editor
 
-LocationTree=Location Tree
-LocationMenu=Location Tree
+LocationTree=Location Trees
+LocationMenu=Location Trees
 LocationMnemonic=L
+LocationStarterPaneText=This is the location tree editor
 
-GeoTimePeriodTree=Geo Time Period Tree
-GeoTimePeriodMenu=Geo Time Period Tree
+GeoTimePeriodTree=Lithostratigraphy Trees
+GeoTimePeriodMenu=Lithostratigraphy Trees
 GeoTimePeriodMnemonic=G
+GeoTimePeriodStarterPaneText=This is the lithostratigraphy tree editor
 
-GeographyTree=Geography Tree
-GeographyMenu=Geography Tree
+GeographyTree=Geography Trees
+GeographyMenu=Geography Trees
 GeographyMnemonic=Y
+GeographyStarterPaneText=This is the geography tree editor
 
 CheckNow=Check For Updates
 
