--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -240,6 +240,11 @@ Replace=Replace
 ReplaceMneu=R
 
 # Other
+SwitchViews=Switch View Type
+ViewTree=View Tree
+EditTreeDef=Edit Tree Definition
+ChooseTreeDef=Choose a Tree
+
 TaxonTree=Taxonomy Trees
 TaxonMenu=Taxonomy Trees
 TaxonMnemonic=R
