Added a bunch of lines to tree tables to turn off all proxy generation by Hibernate. Added some icons to the tree tasks. Worked on enabling/disabling buttons in the tree task nav panel area based on when the tree defs are "in use". Externalized some strings.

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -240,6 +240,11 @@ Replace=Replace
 ReplaceMneu=R
 
 # Other
+SwitchViews=Switch View Type
+ViewTree=View Tree
+EditTreeDef=Edit Tree Definition
+ChooseTreeDef=Choose a Tree
+
 TaxonTree=Taxonomy Trees
 TaxonMenu=Taxonomy Trees
 TaxonMnemonic=R
