--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -177,6 +177,7 @@ SwitchViewsTT=Switch Views
 ShowEditViewTT=Show Edit View
 ShowSpreadsheetTT=Show Grid View
 ShowViewTT=Show View
+ViewRecord=View Record
 
 #TextFieldWithInfo
 ShowRecordInfoTT=Show detailed %s information
