Renaming CatalogSeries to Collection fixing the converter

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -807,7 +807,7 @@ Borrow=Borrow
 BorrowAgent=Borrow Agent
 BorrowMaterial=Borrow Material
 BorrowReturnMaterial=Borrow Return Material
-CatalogSeries=Catalog Series
+Collection=Collection
 CollectingEvent=Collecting Event
 CollectingEventAttr=Collecting Event Attr
 CollectingTrip=Collecting Trip
