--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -117,6 +117,8 @@ LoginUserMismatch=There is no Specify User Record for your database login ID.\n 
 LoginUserMismatchTitle=Missing Specify User
 UPDATE_DATA_STALE=The data in the form has been updated by someone else.\nPress OK to discard your changes and refresh with the new values.
 DELETE_DATA_STALE=The data in the form has been updated by someone else and was not deleted.\nPress OK to refresh the form with the new values.
+DUPLICATE_KEY_ERROR=Specify could not recover from a duplicate key error.
+UNRECOVERABLE_DB_ERROR=Specify was unable to recover from a database update problem.
 ERROR_LABELS_RECORDSET_TABLEID=Labels cannot receieve this type of records.
 OBJ_NOT_DELETED=The data object was not deleted. 
 ERROR_RECORDSET_TABLEID=The items in this bundle cannot be used for this action.
