--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -767,7 +767,7 @@ GENERIC_OBJ_DELETED=%s was deleted.
 ACCESSION_DELETED=Accession %s was deleted.
 ACCESSIONAGENT_DELETED=Accession Agent %s was deleted.
 ACCESSIONAUTHORIZATION_DELETED=Accession Authorization %s was deleted.
-COLLECTIONOBJDEF_DELETED=Collection Object Definition %s was deleted.
+COLLECTIONTYPE_DELETED=Collection Type %s was deleted.
 COLLECTIONOBJECT_DELETED=Collection Object %s was deleted.
 DATATYPE_DELETED=Data Type %s was deleted.
 DETERMINATION_STATUS_DELETED=Determination Status %s was deleted.
@@ -813,10 +813,10 @@ Collection=Collection
 CollectingEvent=Collecting Event
 CollectingEventAttr=Collecting Event Attr
 CollectingTrip=Collecting Trip
-CollectionObjDef=Collection Obj Def
 CollectionObject=Collection Object
 CollectionObjectAttr=Collection Object Attr
 CollectionObjectCitation=Collection Object Citation
+CollectionType=Collection Type
 Collector=Collector
 ColObjAttributes=Collection Object Attributes
 Container=Container
