Added a i18n string that will be needed in the tree viewer

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -252,6 +252,7 @@ TaxonTree=Taxonomy Trees
 TaxonMenu=Taxonomy Trees
 TaxonMnemonic=R
 TaxonStarterPaneText=This is the taxonomy tree editor
+TaxonTreeRelationshipMsg=%s is now a synonym of %s
 
 LocationTree=Location Trees
 LocationMenu=Location Trees
