Added a couple of resource strings.

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -253,6 +253,8 @@ SwitchViews=Switch View Type
 ViewTree=View Tree
 EditTreeDef=Edit Tree Definition
 ChooseTreeDef=Choose a Tree
+TTV_Saving=Saving...
+TTV_Loading=Loading...
 
 TaxonTree=Taxonomy Trees
 TaxonMenu=Taxonomy Trees
